--- a/app/views/students/_form.html.slim
+++ b/app/views/students/_form.html.slim
@@ -6,4 +6,12 @@
         - @student.errors.full_messages.each do |message|
           li = message
 
-  .actions = f.submit
+  .form-group
+      = f.label :name
+      = f.text_field :name, class: 'form-control'
+  .form-group
+      = f.label :register_number
+      = f.text_field :register_number, class: 'form-control'
+
+  .form-group.actions.text-right = f.submit class: 'btn btn-default'
+end
