--- a/app/views/students/edit.html.slim
+++ b/app/views/students/edit.html.slim
@@ -1,8 +1,8 @@
-h1 Editing student
+.row
+  .col-sm-6.col-sm-offset-3
+    h1 Editar estudante
 
-== render 'form'
+    == render 'form'
 
-= link_to 'Show', @student
-'|
-= link_to 'Back', students_path
 
+    = link_to 'Voltar', students_path
