--- a/app/views/students/new.html.slim
+++ b/app/views/students/new.html.slim
@@ -1,5 +1,8 @@
-h1 New student
+.row
+  .col-sm-6.col-sm-offset-3
+    h1 Cadastrar estudante
 
-== render 'form'
+    == render 'form'
 
-= link_to 'Back', students_path
+
+    = link_to 'Voltar', students_path
