Matrícula de estudante

--- a/app/views/courses/new.html.slim
+++ b/app/views/courses/new.html.slim
@@ -1,5 +1,8 @@
-h1 New course
+.row
+  .col-sm-6.col-sm-offset-3
+    h1 Cadastrar curso
 
-== render 'form'
+    == render 'form'
 
-= link_to 'Back', courses_path
+
+    = link_to 'Voltar', courses_path
