--- a/app/views/courses/_form.html.slim
+++ b/app/views/courses/_form.html.slim
@@ -1,9 +1,16 @@
 = form_for @course do |f|
   - if @course.errors.any?
     #error_explanation
-      h2 = "#{pluralize(@course.errors.count, "error")} prohibited this course from being saved:"
+      h2 = "#{pluralize(@course.errors.count, "erro")} impede(m) o curso de ser salvo:"
       ul
         - @course.errors.full_messages.each do |message|
           li = message
 
-  .actions = f.submit
+  .form-group
+      = f.label :name
+      = f.text_field :name, class: 'form-control'
+  .form-group
+      = f.label :description
+      = f.text_field :description, class: 'form-control'
+
+  .form-group.actions.text-right = f.submit class: 'btn btn-default'
