--- a/app/views/courses/index.html.slim
+++ b/app/views/courses/index.html.slim
@@ -1,19 +1,9 @@
-h1 Listing courses
+.row
+  .col-sm-6.col-sm-offset-3
+    h1 Cursos
+    - unless @courses.empty?
+      = render 'courses/table'
 
-table
-  thead
-    tr
-      th
-      th
-      th
+    br
 
-  tbody
-    - @courses.each do |course|
-      tr
-        td = link_to 'Show', course
-        td = link_to 'Edit', edit_course_path(course)
-        td = link_to 'Destroy', course, data: { confirm: 'Are you sure?' }, method: :delete
-
-br
-
-= link_to 'New Course', new_course_path
+    = link_to '<i class="glyphicon glyphicon-pencil"></i> Cadastrar Curso'.html_safe, new_course_path, class: 'btn btn-primary'
