--- a/app/views/students/_form.html.slim
+++ b/app/views/students/_form.html.slim
@@ -1,7 +1,7 @@
 = form_for @student do |f|
   - if @student.errors.any?
     #error_explanation
-      h2 = "#{pluralize(@student.errors.count, "error")} prohibited this student from being saved:"
+      h2 = "#{pluralize(@student.errors.count, "erro")} impede(m) o estudante de ser salvo:"
       ul
         - @student.errors.full_messages.each do |message|
           li = message
