--- a/app/views/students/index.html.slim
+++ b/app/views/students/index.html.slim
@@ -1,25 +1,9 @@
-- provide(:title, "Estudantes")
-h1 Listing students
+.row
+  .col-sm-6.col-sm-offset-3
+    h1 Estudantes
 
-table.table
-  thead
-    tr
-      th Nome
-      th Matrícula
-      th Ações
+    = render 'students/table'
 
-  tbody
-    - @students.each do |student|
-      tr
-        td
-          = student.name
-        td
-          = student.register_number
-        td 
-          = link_to '<i class="glyphicon glyphicon-info-sign"></i> Visualizar'.html_safe, student, class: 'btn btn-info'
-          = link_to '<i class="glyphicon glyphicon-edit"></i> Editar'.html_safe, edit_student_path(student) , class: 'btn btn-primary'
-          = link_to '<i class="glyphicon glyphicon-trash"></i> Excluir'.html_safe, student, data: { confirm: "Tem certeza de que que quer excluir #{student.name}" }, method: :delete , class: 'btn btn-danger'
+    br
 
-br
-
-= link_to '<i class="glyphicon glyphicon-pencil"></i> Cadastrar Estudante'.html_safe, new_student_path, class: 'btn btn-primary'
+    = link_to '<i class="glyphicon glyphicon-pencil"></i> Cadastrar Estudante'.html_safe, new_student_path, class: 'btn btn-primary'
