--- a/app/views/courses/show.html.slim
+++ b/app/views/courses/show.html.slim
@@ -11,7 +11,7 @@
         thead
           tr
             th Nome
-            th Descrição
+            th Matrícula
             th Ações
 
         tbody
